// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Subscriptions /> OCPSubscriptionCard should render 1`] = `
<Card>
  <CardHeader
    className="section-header"
  >
    OpenShift Container Platform now uses Subscription Watch to manage subscriptions.
  </CardHeader>
  <CardBody
    className="section-text"
  >
    To get started, cluster owners or organization administrators should:
    <List
      className="ocp-list"
      component="ol"
      type="1"
    >
      <ListItem>
        View a cluster in OpenShift Cluster Manager.
      </ListItem>
      <ListItem>
        Choose “Edit subscription settings” from either the actions menu in the upper right, or in the Subscriptions settings section of the Overview.
      </ListItem>
      <ListItem>
        Select the options that apply to your cluster in the dialog and save.
      </ListItem>
      <ListItem>
        Subscription Watch should handle the rest. There’s no more attaching subscriptions to clusters.
      </ListItem>
    </List>
  </CardBody>
  <CardBody
    className="section-text"
  >
    <Component
      component="a"
      href="https://cloud.redhat.com/subscriptions/openshift-sw"
      rel="noopener noreferrer"
      target="_blank"
    >
      Open Subscription Watch
    </Component>
  </CardBody>
  <CardBody />
</Card>
`;

exports[`<Subscriptions /> OSDSubscriptionCard Empty should render empty OSD quota summary 1`] = `
<PageSection
  className="subscriptions-empty-state"
>
  <EmptyState>
    <Title
      headingLevel="h4"
      size="2xl"
    >
      You do not have any quota
    </Title>
    <EmptyStateBody>
      <p>
        <a
          href="https://www.openshift.com/products/dedicated/contact/"
          rel="noreferrer noopener"
          target="_blank"
        >
          Contact sales
        </a>
         
        to get started with OpenShift Dedicated.
      </p>
    </EmptyStateBody>
  </EmptyState>
</PageSection>
`;

exports[`<Subscriptions /> OSDSubscriptionCard Error should render error OSD quota summary 1`] = `
<PageSection
  className="subscriptions-empty-state"
>
  <EmptyState>
    <Title
      headingLevel="h4"
      size="2xl"
    >
      Unable to retrieve quota information
    </Title>
    <EmptyStateBody>
      <p>
        An error has occured! Try again or contact support by including this error message:
      </p>
      <q />
      <p>
        Operation ID: N/A
      </p>
    </EmptyStateBody>
    <Component
      onClick={[MockFunction]}
    >
      Try again
    </Component>
  </EmptyState>
</PageSection>
`;

exports[`<Subscriptions /> OSDSubscriptionCard Loading should render loading OSD quota summary 1`] = `
<PageSection>
  <Spinner
    centered={true}
  />
</PageSection>
`;

exports[`<Subscriptions /> OSDSubscriptionCard should render 1`] = `
<Card>
  <CardHeader
    className="section-header"
  >
    OpenShift Dedicated
  </CardHeader>
  <CardBody
    className="section-text"
  >
    The summary of all subscriptions for OpenShift Dedicated purchased by your organization or granted by Red Hat.
  </CardBody>
  <CardBody
    className="osd-table-container"
  >
    <h4
      className="content-header"
    >
      Quota
    </h4>
    <OSDSubscriptionTable
      rows={
        Array [
          Array [
            "cluster.aws",
            "c5.4xlarge",
            Object {
              "title": "multizone",
            },
            "BYOC",
            10,
            15,
            Object {
              "title": <ResourcesAlmostFullIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
                title={null}
              />,
            },
          ],
          Array [
            "cluster.aws",
            "m5.xlarge",
            Object {
              "title": "multizone",
            },
            "BYOC",
            15,
            15,
            Object {
              "title": <ResourcesFullIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
                title={null}
              />,
            },
          ],
          Array [
            "compute.node.aws",
            "c5.4xlarge",
            Object {
              "title": "multizone",
            },
            "BYOC",
            0,
            4,
            Object {
              "title": <OutlinedCircleIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
                title={null}
              />,
            },
          ],
          Array [
            "addon",
            "dbaOperatorAddon",
            Object {
              "title": "N/A",
            },
            "Standard",
            0,
            5,
            Object {
              "title": <OutlinedCircleIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
                title={null}
              />,
            },
          ],
        ]
      }
    />
  </CardBody>
</Card>
`;

exports[`<Subscriptions /> OSDSubscriptionTable should render 1`] = `
<Fragment>
  <Component
    aria-label="Quota Table"
    cells={
      Array [
        "Resource type",
        "Resource name",
        "Availability",
        Object {
          "title": "Plan type",
          "transforms": Array [
            [Function],
          ],
        },
        Object {
          "props": Object {
            "className": "quota-table-used",
          },
          "title": "Used",
        },
        Object {
          "props": Object {
            "className": "quota-table-max",
          },
          "title": "Max",
        },
        "Capacity",
      ]
    }
    rows={Array []}
  >
    <TableHeader />
    <TableBody />
  </Component>
</Fragment>
`;

exports[`<Subscriptions /> Subscriptions should render 1`] = `
<Fragment>
  <PageHeader>
    <PageHeaderTitle
      className="page-title"
      title="Subscriptions"
    />
  </PageHeader>
  <PageSection
    id="subscriptions-content"
  >
    <OCPSubscriptionCard
      organizationID="org-1"
    />
    <Connect(OSDSubscriptionCard)
      organizationID="org-1"
    />
  </PageSection>
</Fragment>
`;
